Fix webkit scrollbar colours, prd webpack profile

--- a/src/ui/ui-panel.scss
+++ b/src/ui/ui-panel.scss
@@ -18,13 +18,17 @@
         overflow-y: auto;
         scrollbar-color: rgba(230,230,255,0.1) transparent;
         scrollbar-width: thin;
-        &::-webkit-scrollbar-track  {
-            background-color: transparent;
-        }
-        &::-webkit-scrollbar-thumb {
-            background-color: rgba(0,0,0,0.2);
-        }
     }
+}
+::-webkit-scrollbar {
+    height: 8px;
+    width: 8px;
+    background: rgba(0,0,0,0.2);
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(230,230,255,0.1);
+    border-radius: none;
 }
 
 :host .header {
@@ -74,3 +78,4 @@
         margin: 0 0.5rem 0.5rem 0.5rem;
     }
 }
+ 
